infrastructure/configs/local/traefik/ingressroutes.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: frontend
  namespace: cv-site-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`cv.k8s.local`)
      kind: Rule
      services:
        - name: frontend
          port: 80
    - match: Host(`cv.k8s.local`) && (Path(`/t/script.js`) || Path(`/t/api/send`))
      kind: Rule
      services:
        - name: umami
          namespace: monitoring-prd
          port: 3000
      middlewares:
        - name: strip-analytics-prefix
          namespace: cv-site-prd
  tls:
    secretName: cv-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api
  namespace: cv-site-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.k8s.local`) && (PathPrefix(`/api/trades`) || PathPrefix(`/api/game`) || PathPrefix(`/api/price`) || PathPrefix(`/actuator`) || PathPrefix(`/ws`))
      kind: Rule
      services:
        - name: trading-simulator
          port: 8080
  tls:
    secretName: api-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth.k8s.local`)
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls:
    secretName: auth-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.k8s.local`)
      kind: Rule
      services:
        - name: grafana
          port: 3000
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: grafana-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: akhq
  namespace: monitoring-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`akhq.k8s.local`)
      kind: Rule
      services:
        - name: akhq
          port: 8080
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: akhq-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus
  namespace: monitoring-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`prometheus.k8s.local`)
      kind: Rule
      services:
        - name: prometheus
          port: 9090
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: prometheus-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`traefik.k8s.local`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: traefik-k8s-local-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: umami
  namespace: monitoring-prd
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`umami.k8s.local`)
      kind: Rule
      services:
        - name: umami
          port: 3000
      middlewares:
        - name: authelia
          namespace: authelia
  tls:
    secretName: umami-k8s-local-tls
